# intents

./: LEGAL_DATA.md  README.md  knn_intents.py  reporting.py  requirements.txt  setup.cfg  train.py
intents/: knn_intents.py  reporting.py  setfit.py  train.py
reports/banking77/distilroberta-base/2022-03-10T12:45:22.782409/: predictions.csv  report.csv
reports/banking77/distilroberta-base/2022-03-11T13:53:02.960568/: predictions_k1.csv  predictions_k2.csv  predictions_k3.csv  predictions_k4.csv  predictions_k5.csv  report_k1.csv  report_k2.csv  report_k3.csv  report_k4.csv  report_k5.csv
reports/banking77/microsoft/MiniLM-L12-H384-uncased/2022-03-10T12:51:15.804562/: predictions.csv  report.csv
reports/banking77/microsoft/MiniLM-L12-H384-uncased/2022-03-11T14:00:41.063767/: predictions_k1.csv  predictions_k2.csv  predictions_k3.csv  predictions_k4.csv  predictions_k5.csv  report_k1.csv  report_k2.csv  report_k3.csv  report_k4.csv  report_k5.csv
reports/banking77/microsoft/mpnet-base/2022-03-10T12:37:05.002281/: predictions.csv  report.csv
reports/banking77/microsoft/mpnet-base/2022-03-11T13:41:41.548988/: predictions_k1.csv  predictions_k2.csv  predictions_k3.csv  predictions_k4.csv  predictions_k5.csv  report_k1.csv  report_k2.csv  (+3 more)
reports/banking77/roberta-large/2022-03-10T13:51:35.049544/: predictions.csv  report.csv
reports/banking77/roberta-large/2022-03-11T15:08:31.201715/: predictions_k1.csv  predictions_k2.csv  predictions_k3.csv  predictions_k4.csv  predictions_k5.csv  report_k1.csv  report_k2.csv  report_k3.csv  report_k4.csv  report_k5.csv
(+108 files in other folders)
