[metadata]
name = intents
version = 0.1.0
author = Chris Brew
author_email=christopher.brew@gmail.com
description= Transformers code for many intents
long_description = file: README.md

[options]
packages = find:
install_requires =
    pip >= 21.0.1
    setuptools == 56.0.0
    wheel == 0.36.2
    transformers[sentencepiece]
    datasets
    scikit-learn
    numpy
    scipy
    torch
    sentence_transformers
    pandas
    wandb
    pytorch-metric-learning
    typer

[options.extras_require]
notebook =
    jupyter>=1.0.0
    matplotlib
dev =
    black==22.1.0
    flake8==4.0.1